# wintracker

./: .gitignore  README.md  build.py  install_context_menu.py  main.py  pyproject.toml
innoscript/: script.iss
