[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "windowhack"
version = "0.1.0"
description = "Get active window information on Windows"
requires-python = ">=3.8"
dependencies = [
    "psutil>=7.2.2",
    "pywin32>=311",
    "pyinstaller>=6.0.0",
]

[tool.setuptools]
py-modules = ["main", "install_context_menu", "build"]
